# AI-Agent-Runtime-PR-Review-Automation-CLI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/agent_pr_reviewer/: __init__.py  cli.py  gitops.py  models.py  reporting.py
src/agent_pr_reviewer/analyzers/: __init__.py  base.py  python.py
src/agent_pr_reviewer/integrations/: __init__.py  http.py
src/agent_pr_reviewer/runtime/: __init__.py  memory.py  retry.py  tools.py
src/agent_pr_reviewer/workflows/: pr_review.py
tests/: test_diff_parser.py  test_retry.py
