[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pr-reviewer"
version = "0.1.0"
description = "Agent runtime and deterministic PR review orchestration system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Priyanka Nandwani" }
]
dependencies = []

[project.scripts]
agent-pr-review = "agent_pr_reviewer.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
